source/raylib.pas


{Get a random value between min and max (both included)}
function GetRandomValue(min, max: Integer): Integer; cdecl; external cDllName;
{Set the seed for the random number generator}
procedure SetRandomSeed(seed: LongWord); cdecl; external cDllName;
{Takes a screenshot of current screen (filename extension defines format)}
procedure TakeScreenshot(fileName: PChar); cdecl; external cDllName;
{Setup init configuration flags (view FLAGS)}
procedure SetConfigFlags(flags:LongWord); cdecl; external cDllName;
{Show trace log messages (LOG_DEBUG, LOG_INFO, LOG_WARNING, LOG_ERROR...)}
procedure TraceLog(logLevel: Integer; text: PChar); cdecl; varargs; external cDllName;
{Set the current threshold (minimum) log level}
procedure SetTraceLogLevel(logLevel: Integer); cdecl; external cDllName;
{Internal memory allocator}
function MemAlloc(size: Integer): Pointer; cdecl; external cDllName;
{Internal memory reallocator}
function MemRealloc(ptr: Pointer; size: Integer): Pointer; cdecl; external cDllName;
{Internal memory free}
procedure MemFree(ptr: Pointer); cdecl; external cDllName;
{Open URL with default system browser (if available)}
procedure OpenURL(const url: PChar); cdecl; external cDllName;

(* Set custom callbacks *)
(* Callbacks to hook some internal functions *)
// WARNING: This callbacks are intended for advance users
type
  TTraceLogCallback = procedure(logLevel: Integer; text: PChar); cdecl; varargs; // , va_list args varargs ???
  TLoadFileDataCallback = function(fileName: PChar; out bytesRead: LongWord): PChar; cdecl;
  TSaveFileDataCallback = function(fileName: PChar; data: Pointer; bytesToWrite: LongWord): Boolean; cdecl;
  TLoadFileTextCallback = function(fileName: PChar): PChar; cdecl;
  TSaveFileTextCallback = function(fileName, text: PChar): Boolean; cdecl;

  { Set custom trace log }
  procedure SetTraceLogCallback(callback: TTraceLogCallback); cdecl; external cDllName;
  { Set custom file binary data loader }
  procedure SetLoadFileDataCallback(callback: TLoadFileDataCallback); cdecl; external cDllName;
  { Set custom file binary data saver }
  procedure SetSaveFileDataCallback(callback: TSaveFileDataCallback); cdecl; external cDllName;
  { Set custom file text data loader }
  procedure SetLoadFileTextCallback(callback: TLoadFileTextCallback); cdecl; external cDllName;
  { Set custom file text data saver }
  procedure SetSaveFileTextCallback(callback: TSaveFileTextCallback); cdecl; external cDllName;


(* Files management functions *)

{Load file data as byte array (read)}
function LoadFileData(fileName: PChar; bytesRead: PLongWord): Pointer; cdecl; external cDllName;
{Unload file data allocated by LoadFileData()}
procedure UnloadFileData(data: Pointer); cdecl; external cDllName;
{Save data to file from byte array (write), returns true on success}
function SaveFileData(fileName: PChar; data: Pointer; bytesToWrite: LongWord): Boolean; cdecl; external cDllName;
{Export data to code (.h), returns true on success}
function ExportDataAsCode(data: PChar; size: LongWord; fileName: PChar): Boolean; cdecl; external cDllName;
{Load text data from file (read), returns a '\0' terminated string}
function LoadFileText(fileName: Pchar): Pchar; cdecl; external cDllName;
{Unload file text data allocated by LoadFileText()}
procedure UnloadFileText(text: PChar); cdecl; external cDllName;
{Save text data to file (write), string must be '\0' terminated, returns true on success}
function SaveFileText(fileName, text: PChar): Boolean; cdecl; external cDllName;
{Check if file exists}
function FileExists(fileName: PChar): Boolean; cdecl; external cDllName;
{Check if a directory path exists}
function DirectoryExists(dirPath: PChar): Boolean; cdecl; external cDllName;
{Check file extension (including point: .png, .wav)}
function IsFileExtension(fileName, ext: PChar): Boolean; cdecl; external cDllName;
{Get file length in bytes (NOTE: GetFileSize() conflicts with windows.h)}
function GetFileLength(fileName: PChar): Integer; cdecl; external cDllName;
{Get pointer to extension for a filename string (includes dot: '.png')}
function GetFileExtension(fileName: PChar): PChar; cdecl; external cDllName;
{Get pointer to filename for a path string }
function GetFileName(filePath: PChar): PChar; cdecl; external cDllName;
{Get filename string without extension (uses static string)}
function GetFileNameWithoutExt(filePath: PChar): PChar; cdecl; external cDllName;
{Get full path for a given fileName with path (uses static string)}
function GetDirectoryPath(filePath: PChar): PChar; cdecl; external cDllName;
{Get previous directory path for a given path (uses static string)}
function GetPrevDirectoryPath(dirPath: PChar): PChar; cdecl; external cDllName;
{Get current working directory (uses static string)}
function GetWorkingDirectory: PChar; cdecl; external cDllName;
{Get the directory if the running application (uses static string)}
function GetApplicationDirectory: PChar; cdecl; external cDllName;
{Change working directory, return true on success}
function ChangeDirectory(dir: PChar): Boolean; cdecl; external cDllName;
{Check if a given path is a file or a directory}
function IsPathFile(path: PChar): Boolean; cdecl; external cDllName;
{Load directory filepaths}
function LoadDirectoryFiles(dirPath: PChar): TFilePathList; cdecl; external cDllName;
{Load directory filepaths with extension filtering and recursive directory scan}
function LoadDirectoryFilesEx(basePath, filter: PChar; scanSubdirs: Boolean): TFilePathList; cdecl; external cDllName;
{Unload filepaths}
procedure UnloadDirectoryFiles(files: TFilePathList); cdecl; external cDllName;
{Check if a file has been dropped into window}
function IsFileDropped: Boolean; cdecl; external cDllName;
{Load dropped filepaths}
function LoadDroppedFiles: TFilePathList; cdecl; external cDllName;
{Unload dropped filepaths}
procedure UnloadDroppedFiles(files: TFilePathList); cdecl; external cDllName;
{Get file modification time (last write time)}
function GetFileModTime(fileName: PChar): QWord; cdecl; external cDllName;

(* Compression/Encoding functionality *)

{Compress data (DEFLATE algorithm), memory must be MemFree()}
function CompressData(const data: Pointer; dataSize: Integer; compDataSize: PInteger): Pointer; cdecl; external cDllName;
{Decompress data (DEFLATE algorithm), memory must be MemFree()}
function DecompressData(const compData: Pointer; compDataSize: Integer; dataSize: PInteger): Pointer; cdecl; external cDllName;
{Encode data to Base64 string, memory must be MemFree()}
function EncodeDataBase64(const data: PChar; dataSize: Integer; outputSize: PInteger): PChar; cdecl; external cDllName;
{Decode Base64 string data, memory must be MemFree()}
function DecodeDataBase64(const data: PChar; outputSize: PInteger): PChar; cdecl; external cDllName;

//------------------------------------------------------------------------------------
// Input Handling Functions (Module: core)
//------------------------------------------------------------------------------------

(* Input-related functions: keyboard *)

{Check if a key has been pressed once}
function IsKeyPressed(key: Integer): Boolean; cdecl; external cDllName;
{Check if a key is being pressed}
function IsKeyDown(key: Integer): Boolean;cdecl;external cDllName;
{Check if a key has been released once}
function IsKeyReleased(key: Integer): Boolean;cdecl;external cDllName;
{Check if a key is NOT being pressed}
function IsKeyUp(key: Integer): Boolean;cdecl;external cDllName;
{Set a custom key to exit program (default is ESC)}
procedure SetExitKey(key: Integer); cdecl; external cDllName;
{Get key pressed (keycode), call it multiple times for keys queued, returns 0 when the queue is empty}
function GetKeyPressed: Integer; cdecl; external cDllName;
{Get char pressed (unicode), call it multiple times for chars queued, returns 0 when the queue is empty}
function GetCharPressed: Integer; cdecl; external cDllName;

(* Input-related functions: gamepads *)

{Check if a gamepad is available}
function IsGamepadAvailable(gamepad: Integer): Boolean; cdecl; external cDllName;
{Get gamepad internal name id}
function GetGamepadName(gamepad: Integer): PChar; cdecl; external cDllName;
{Check if a gamepad button has been pressed once}
function IsGamepadButtonPressed(gamepad, button: Integer): Boolean; cdecl; external cDllName;
{Check if a gamepad button is being pressed}
function IsGamepadButtonDown(gamepad, button: Integer): Boolean; cdecl; external cDllName;
{Check if a gamepad button has been released once}
function IsGamepadButtonReleased(gamepad, button: Integer): Boolean; cdecl; external cDllName;
{Check if a gamepad button is NOT being pressed}
function IsGamepadButtonUp(gamepad, button: Integer): Boolean; cdecl; external cDllName;
{Get the last gamepad button pressed}
function GetGamepadButtonPressed: Integer; cdecl; external cDllName;
{Get gamepad axis count for a gamepad}
function GetGamepadAxisCount(gamepad: Integer): Integer; cdecl; external cDllName;
{Get axis movement value for a gamepad axis}
function GetGamepadAxisMovement(gamepad, axis: Integer): Single; cdecl; external cDllName;
{Set internal gamepad mappings (SDL_GameControllerDB)}
function SetGamepadMappings(mappings: PChar): Integer; cdecl; external cDllName;

(* Input-related functions: mouse *)

{Check if a mouse button has been pressed once}
function IsMouseButtonPressed(button: Integer): Boolean; cdecl; external cDllName;
{Check if a mouse button is being pressed}
function IsMouseButtonDown(button: Integer): Boolean; cdecl; external cDllName;
{Check if a mouse button has been released once}
function IsMouseButtonReleased(button: Integer): Boolean; cdecl; external cDllName;
{Check if a mouse button is NOT being pressed}
function IsMouseButtonUp(button: Integer): Boolean; cdecl; external cDllName;
{Get mouse position X}
function GetMouseX: Integer; cdecl; external cDllName;
{Get mouse position Y}
function GetMouseY: Integer; cdecl; external cDllName;
{Get mouse position XY}
function GetMousePosition: TVector2; cdecl;external cDllName;
{Get mouse delta between frames}
function GetMouseDelta: TVector2; cdecl; external cDllName;
{Set mouse position XY}
procedure SetMousePosition(x,y: Integer); cdecl; external cDllName;
{Set mouse offset}
procedure SetMouseOffset(offsetX, offsetY: Integer); cdecl; external cDllName;
{Set mouse scaling}
procedure SetMouseScale(scaleX, scaleY: Single); cdecl; external cDllName;
{Get mouse wheel movement for X or Y, whichever is larger}
function GetMouseWheelMove: Single; cdecl; external cDllName;
{Get mouse wheel movement for both X and Y}
function GetMouseWheelMoveV: TVector2; cdecl; external cDllName;
{ Set mouse cursor}
procedure SetMouseCursor(cursor: Integer); cdecl; external cDllName;

(* Input-related functions: touch *)

{Get touch position X for touch point 0 (relative to screen size)}
function GetTouchX: Integer; cdecl; external cDllName;
{Get touch position Y for touch point 0 (relative to screen size)}
function GetTouchY: Integer; cdecl; external cDllName;
{Get touch point identifier for given index}
function GetTouchPointId(index: Integer): Integer; cdecl; external cDllName;
{Get touch position XY for a touch point index (relative to screen size)}
function GetTouchPosition(index: Integer): TVector2; cdecl; external cDllName;
{Get touch points count}
function GetTouchPointCount: Integer; cdecl; external cDllName;
{Get last touch event registered}
function GetTouchEvent: Integer; cdecl; external cDllName;

//------------------------------------------------------------------------------------
// Gestures and Touch Handling Functions (Module: rgestures)
//------------------------------------------------------------------------------------
